# typeinf

./: Cargo.toml
src/: grammar.lalrpop  main.rs
