[package]
name = "tinf"
version = "0.1.0"
authors = ["Luis Vegas <luisvegasmor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.5"

[dependencies]
lalrpop-util = "0.19.5"
regex = "1"
